eventual safe node, topo sort